@@ -41,10 +41,10 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} \
               -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake \
-              -DWITH_GRID_SYNTH=ON
+              -DBUILD_GRID_SYNTH=ON
           else
             cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} \
-              -DWITH_GRID_SYNTH=ON
+              -DBUILD_GRID_SYNTH=ON
           fi
 
       - name: Build staq
